Remove redundant centering, align bottom part properly

--- a/app/views/tracks/approaches/show.html.haml
+++ b/app/views/tracks/approaches/show.html.haml
@@ -44,9 +44,9 @@
           = render ViewComponents::Blog::SharePostLink.new(@approach)
 
   .md-container.flex.flex-col
-    .flex.items-center.justify-center.mb-32
-      = graphical_icon "dig-deeper-gradient", css_class: "h-[32px] mr-24"
-      .flex.flex-col.items-center
+    .flex.justify-center.mb-32
+      = graphical_icon "dig-deeper-gradient", css_class: "h-[32px] mr-24 self-center"
+      .flex.flex-col
         %h2.text-h3.font-bold.mb-4 Other Approaches to Asteroid Exploration Co.
         .text-p-base.text-textColor6 Other ways our community solved this exercise
 
