--- a/app/css/ui-kit/borders.css
+++ b/app/css/ui-kit/borders.css
@@ -15,4 +15,12 @@
         background-origin: border-box;
         background-clip: padding-box, border-box;
     }
+    .border-gradient-bgGray {
+        border-style: solid;
+        border-color: transparent;
+        background-image: linear-gradient(#fbfcfe, #fbfcfe),
+            linear-gradient(#2200ff, #9e00ff);
+        background-origin: border-box;
+        background-clip: padding-box, border-box;
+    }
 }
