--- a/app/views/tracks/approaches/show.html.haml
+++ b/app/views/tracks/approaches/show.html.haml
@@ -1,14 +1,12 @@
 #page-approaches-show.pb-80
   %header.pt-24.md:pt-48.pb-64.md:pb-128
     .md-container.flex.flex-col.md:flex-row-reverse.items-center.c-shapes.c-shapes-1{ class: 'gap-[48px]' }
-      .py-8.px-24.bg-gray.border-2.border-gradient.rounded-100.flex.flex-row.items-center{ class: "h-[68px]" }
-        = graphical_icon "balloons", category: :graphics, css_class: "h-[40px] mr-12"
-        = graphical_icon "building", category: :graphics, css_class: "h-48 mr-12"
-        -# = track_icon css_class: "h-[40px] w-[40px] mr-12"
-          . = exercise_icon "amusement-park", css_class: "h-48 mr-12"
+      .py-8.px-24.bg-gray.border-2.border-gradient-bgGray.rounded-100.flex.flex-row.items-center{ class: "h-[68px]" }
+        = track_icon @track, css_class: 'h-[40px] w-[40px] mr-12'
+        = exercise_icon @exercise, css_class: 'h-[48px] w-[48px] mr-12'
         .flex.flex-col.mr-24
-          .text-h5.whitespace-nowrap Amusement park
-          .textColor-6.font-normal.leading-150.text-16 Csharp
+          .text-h5.whitespace-nowrap= @exercise.title
+          .textColor-6.font-normal.leading-150.text-16= @track.title
         = graphical_icon "new-tab", css_class: "filter-textColor6 w-[16px] h-[16px]"
 
       .block.flex-grow
@@ -16,7 +14,7 @@
         .flex.items-center.text-16.font-semibold.leading-150
           = avatar(@approach.author)
           .text-textColor1
-            by #{@approach.author.name}&nbsp;
+            by #{@approach.author.handle}&nbsp;
           .text-textColor6
             &middot; Published #{format_date(@approach.published_at)}
   .md-container.mb-32.md:mb-48
