--- a/app/views/mailers/notifications_mailer/automated_feedback_added.text.haml
+++ b/app/views/mailers/notifications_mailer/automated_feedback_added.text.haml
@@ -1,5 +1,5 @@
 Hi #{@user.handle},
 \
-New feedback is added to iteration (##{@iteration.idx}) of your solution to #{@exercise.title} on the #{@track.title} track. We #{@emphasis} recommend taking a look.
+New feedback has been added to iteration (##{@iteration.idx}) of your solution to #{@exercise.title} on the #{@track.title} track. We #{@emphasis}recommend taking a look and seeing how you can improve your solution!
 \
 Go to the iteration: #{track_exercise_iterations_url(@track, @exercise)}
