Add Credits component to bottom of ApproachSnippets

--- a/app/views/tracks/approaches/show.html.haml
+++ b/app/views/tracks/approaches/show.html.haml
@@ -59,3 +59,4 @@
           %p.text-p-base.text-textColor6.mb-12
             Explore how to use the Forwardable module and its def_delegator and
             def_delegators methods to use delegation to solve Bob
+          = render ReactComponents::Track::Credits.new(5, "contributor", [@approach.author.avatar_url])
