--- a/app/views/tracks/approaches/show.html.haml
+++ b/app/views/tracks/approaches/show.html.haml
@@ -59,4 +59,4 @@
           %p.text-p-base.text-textColor6.mb-12
             Explore how to use the Forwardable module and its def_delegator and
             def_delegators methods to use delegation to solve Bob
-          = render ReactComponents::Track::Credits.new([@approach.author.avatar_url], 5, "contributor", 3, "reviewer")
+          = render ReactComponents::Track::Credits.new(Array.new(5, @approach.author.avatar_url), 5, "contributor", 3, "reviewer")
