--- a/app/views/tracks/approaches/show.html.haml
+++ b/app/views/tracks/approaches/show.html.haml
@@ -46,7 +46,7 @@
     .flex.justify-center.mb-32
       = graphical_icon "dig-deeper-gradient", css_class: "h-[32px] mr-24 self-center"
       .flex.flex-col
-        %h2.text-h3.font-bold.mb-4 Other Approaches to Asteroid Exploration Co.
+        %h2.text-h3.font-bold.mb-4 Other Approaches to #{@exercise.title}
         .text-p-base.text-textColor6 Other ways our community solved this exercise
 
     .grid.gap-24.grid-cols-1.sm:grid-cols-2.md:grid-cols-3.mb-32
