Use small buttons

--- a/app/views/tracks/approaches/tooltip_locked.html.haml
+++ b/app/views/tracks/approaches/tooltip_locked.html.haml
@@ -6,7 +6,7 @@
     %p.mb-4.leading-150
       Unlock the Dig Deeper tab to see how the community approached and solved #{@exercise.title}.
 
-    = button_to "Unlock this tab", unlock_help_api_solution_url(@solution.uuid), method: :patch, class: 'btn-primary btn-l'
+    = button_to "Unlock this tab", unlock_help_api_solution_url(@solution.uuid), method: :patch, class: 'btn-primary btn-s'
   - else
     %p.mb-4.leading-150
       You can only view Approaches for this exercise if you've downloaded or submitted a solution to this exercise.
