--- a/app/views/tracks/approaches/tooltip_locked.html.haml
+++ b/app/views/tracks/approaches/tooltip_locked.html.haml
@@ -1,17 +1,19 @@
-.c-generic-tooltip.text-14{ class: "!py-16 !px-24 !max-w-[420px]" }
-  %p.text-16.text-white.font-semibold.leading-170.mb-12
+.c-generic-tooltip.text-16.text-borderLight.leading-150{ class: "!py-16 !px-24 !max-w-[420px]" }
+  %p.text-lightPurple.font-semibold.mb-4
     Struggling with this exercise?
 
   - if @solution&.downloaded? || @solution&.submitted?
-    %p.mb-4.leading-150
+    %p.mb-12{ class: '!mt-0 ' }
       Unlock the Dig Deeper tab to see how the community approached and solved #{@exercise.title}.
 
-    = button_to unlock_help_api_solution_url(@solution.uuid), method: :patch, class: 'btn-primary btn-s' do
-      = graphical_icon 'unlock'
-      Unlock this tab
+    .flex.mb-10
+      .grow{ class: "w-[100%]" }
+        = button_to unlock_help_api_solution_url(@solution.uuid), method: :patch, class: 'btn-primary btn-s grow w-[100%] text-14 !py-4 !px-16' do
+          = graphical_icon 'unlock', css_class: "w-[14px] h-[14px]"
+          Unlock this tab
   - else
-    %p.mb-4.leading-150
+    %p.mb-12
       You can only view Approaches for this exercise if you've downloaded or submitted a solution to this exercise.
 
-  .font-semibold.text-lightGold.text-14.leading-170.flex.flex-row.items-center
+  .font-semibold.text-lightGold.text-14
     Warning! We highly recommend you try your best without revealing Approaches first.
