Update tooltip texts

--- a/app/views/tracks/approaches/tooltip_locked.html.haml
+++ b/app/views/tracks/approaches/tooltip_locked.html.haml
@@ -13,7 +13,7 @@
           Unlock this tab
   - else
     %p.mb-12
-      You can only view Approaches for this exercise if you've downloaded or submitted a solution to this exercise.
+      You can only view the Dig Deeper tab for this exercise if you've attempted this exercise at least once.
 
   .font-semibold.text-lightGold.text-14
-    Warning! We highly recommend you try your best without revealing Approaches first.
+    We highly recommend you try your best without exploring the Dig Deeper tab first.
