--- a/app/views/tracks/community_solutions/tooltip_locked.html.haml
+++ b/app/views/tracks/community_solutions/tooltip_locked.html.haml
@@ -13,7 +13,7 @@
           Unlock this tab
   - else
     %p.mb-12
-      You can only view Community Solutions if you've downloaded or submitted a solution to this exercise.
+      You can only view the Community Solutions tab if you've attempted this exercise at least once.
 
   .font-semibold.text-lightGold.text-14
-    Warning! We highly recommend you try your best without revealing Community Solutions first.
+    We highly recommend you try your best without exploring the Community Solutions tab first.
