Remove flex below xl screen size

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -86,12 +86,12 @@
         .feature
           = graphical_icon "features-editor"
           %h3.text-h4 Use the Exercism in-browser editor
-          %p.text-p-base Don’t spend hours installing a language locally just to try it out. We support all 70 of our programming languages in our in-browser editor.
+          %p.text-p-base Don&apos;t spend hours installing a language locally just to try it out. We support all 70 of our programming languages in our in-browser editor.
 
         .feature
           = graphical_icon "features-feedback"
           %h3.text-h4 Get automated analysis on your code
-          %p.text-p-base Not quite sure how well you’ve done? We run automatic analysis on your solutions to give you quick feedback and points of improvement.
+          %p.text-p-base Not quite sure how well you&apos;ve done? We run automatic analysis on your solutions to give you quick feedback and points of improvement.
 
   %section.mentoring-section.mb-80.pt-48.md:pt-96.pb-64
     .lg-container
@@ -116,13 +116,13 @@
       .features.grid.grid-cols-1.md:grid-cols-3.gap-x-80.gap-y-32
         .feature
           = graphical_icon "features-do-not-know"
-          %h3.text-h4 You don’t know what you don’t know
-          %p.text-p-base When learning a new language, the hardest part is not being aware of the gaps in your knowledge. Our mentors can look at your code and immediately see the ideas you're not familiar with and give you a level-up by unlocking new knowledge.
+          %h3.text-h4 You don&apos;t know what you don&apos;t know
+          %p.text-p-base When learning a new language, the hardest part is not being aware of the gaps in your knowledge. Our mentors can look at your code and immediately see the ideas you&apos;re not familiar with and give you a level-up by unlocking new knowledge.
 
         .feature
           = graphical_icon "features-fluency"
           %h3.text-h4 Learn language-specific conventions
-          %p.text-p-base Becoming fluent in a language is more than being able to write code in it - it's about being able to think in that language. Our mentors will help guide you to how to reshape your thinking to write idiomatic code.
+          %p.text-p-base Becoming fluent in a language is more than being able to write code in it - it&apos;s about being able to think in that language. Our mentors will help guide you to how to reshape your thinking to write idiomatic code.
 
         .feature
           = graphical_icon "features-feedback"
